# gnl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.in  config.h  config.status  configure  configure.ac  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  libtool  main  main.c  main_bonus.c  reconf_install.sh  test_two_line.txt
autom4te.cache/: output.1  output.3  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4
m4/: libtool.m4
src/: Makefile  Makefile.am  Makefile.in  get_next_line.c  get_next_line.h  get_next_line.lo  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils.lo  get_next_line_utils_bonus.c  libget_next_line.la
src/.deps/: get_next_line.Plo  get_next_line.Tpo  get_next_line_utils.Plo
src/.libs/: libget_next_line.dylib  libget_next_line.la  libget_next_line.lai
test_case/: get_next_line.c  get_next_line.h  get_next_line_utils.c
tests/: Makefile  Makefile.am  Makefile.in  check_get_next_line  check_get_next_line.c  test_two_line.txt
tests/.deps/: check_ft_isalpha-check_ft_isalpha.Po  check_ft_isalpha.Po  check_ft_itoa-check_ft_itoa.Po  check_ft_split-check_ft_split.Po  check_ft_strlcat-check_ft_strlcat.Po  check_ft_strtrim-check_ft_strtrim.Po  check_get_next_line-check_get_next_line.Po
tests/.libs/: check_get_next_line
